# wheeegi

./: .env.example  .gitignore  README.md  architecture.md  pyproject.toml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/00-initialization/: 00-01-PLAN.md  00-01-SUMMARY.md
.planning/phases/01-agi-core/: 01-01-PLAN.md
.planning/phases/02-extensions/: 02-01-PLAN.md
.planning/phases/03-experiments/: 03-01-PLAN.md
examples/: circleci-self-heal.yml  github-actions-self-heal.yml  gitlab-ci-self-heal.yml  health-checks.json.example  notifications.json.example  pre-commit-self-heal.sh  project-structure.md
project/: README.md  architecture.md  findings.md  gemini.md  process-journal.md  progress.md  protocol-evolution.json  source-of-truth.json  wheee-config.json
src/agi/: __init__.py  core.py  main.py  perceive.py  planner.py  reasoner.py  reflect.py
templates/: interaction-sop-template.md  phase-template.md
templates/commands/: commit-push-pr.sh
tests/: __init__.py  test_builtin_tools.py  test_core.py  test_memory.py  test_perceive.py  test_persistence.py  test_reasoner.py  test_reflect.py
tools/automation/: assess-mode.js  auto-doc-watcher.js  context-cleaner.js  context-monitor.js  doc-process.js  dry-check.js  fip-assistant.js  generate-content.js  health-check.js  notify-mode-change.js  observe-protocol.js  performance-tracker.js  project-doctor.js  scheduled-content.js  self-heal-build.js  setup.sh  sync-sop.js  vulnerability-tracker.js
tools/dashboard/: README.md  package.json  start.sh  validate.js
(+48 files in other folders)
